# RubinsOracle

./: .editorconfig  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION.md  LICENSE  Makefile  README.md  pyproject.toml  test_parquet_load.py  verify_installation.py
.claude/: CLAUDE.md
.github/workflows/: ci.yml
configs/: ensemble_dual_neuralprophet.yaml  ensemble_dual_prophet.yaml  ensemble_np_lagged_regressors.yaml  ensemble_vmd_prophet.yaml  neuralprophet_bandpass.yaml  neuralprophet_default.yaml  neuralprophet_external_decomp.yaml  neuralprophet_high_freq.yaml  neuralprophet_low_freq.yaml  neuralprophet_savgol_base.yaml  neuralprophet_vmd.yaml  prophet_default.yaml
docs/: conf.py  index.rst
examples/: basic_usage.py  compare_decomposer_models.ipynb  compare_forecast_models.ipynb  comparison_notebook_final.ipynb  comparison_notebook_v3.ipynb  make_temp_simulation.py  real_data_decomposition.ipynb  rubin_vmd_decomposer.py  signal_decomposer_v2.py  signal_decomposer_v3.py  signal_decomposition_guide.md  signal_decomposition_overview.ipynb  signal_decomposition_temp2024.ipynb  signal_decomposotion_padding.ipynb  stl_decomposer.py  temperature_workflow.py  verify_installation.py
rubin_oracle/: __init__.py  base.py  config.py  preprocessing.py
rubin_oracle/configs/: neural_prophet_15min.yaml  neural_prophet_deep.yaml  neural_prophet_default.yaml  prophet_default.yaml
rubin_oracle/models/: __init__.py  ensemble.py  neural_prophet.py  prophet.py
rubin_oracle/utils/: __init__.py  data.py  frequency.py  metrics.py  output.py  persistence.py  postprocessing.py  seasonality.py
tests/: test_ar_layers.py  test_baseline.py  test_batch_size.py  test_configs.py  test_data_size.py  test_epochs.py  test_features.py  test_lag_days.py  test_lr_epochs.py  test_n_forecast.py  test_period_pairs.py  test_plot_demo.py  test_prophet.py  test_savgol_vs_bandpass.py  test_validation.py  verify_installation.py
validations/: explore_forecasts.ipynb  plot_results.py
