[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rubin-oracle"
version = "0.1.0"
description = "Unified weather forecasting package for Rubin Observatory using Prophet and NeuralProphet"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "João Esteves", email = "your.email@example.com"}
]
keywords = ["forecasting", "time-series", "weather", "prophet", "neural-prophet", "rubin-observatory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    "pandas>=2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "prophet>=1.1",
]

[project.optional-dependencies]
neural = [
    "neuralprophet>=0.7",
    "torch>=1.13",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "ipython>=8.0",
    "jupyter>=1.0",
]
all = [
    "rubin-oracle[neural,dev]",
]

[project.urls]
Homepage = "https://github.com/estevesjh/rubinWeatherForecast"
Repository = "https://github.com/estevesjh/rubinWeatherForecast"
Issues = "https://github.com/estevesjh/rubinWeatherForecast/issues"

[tool.setuptools]
packages = ["rubin_oracle", "rubin_oracle.models", "rubin_oracle.utils"]

[tool.setuptools.package-data]
rubin_oracle = ["configs/*.yaml"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "prophet.*",
    "neuralprophet.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=rubin_oracle",
    "--cov-report=term-missing",
    "--cov-report=html",
]
